create an alert when a user likes a picture

--- a/newsfeed/src/app/components/home/home.component.html
+++ b/newsfeed/src/app/components/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="feedsSection">
+<div class="nav">
+    <app-navbar></app-navbar>
+</div>
+
+<div class="all-feeds">
+    <h6 class="center">All feeds alert</h6>
+    <app-image-alert></app-image-alert>
+    <app-comment-alert></app-comment-alert>
+    <app-like-alert></app-like-alert>
+</div>
+</div>
