--- a/newsfeed/src/app/components/navbar/navbar.component.css
+++ b/newsfeed/src/app/components/navbar/navbar.component.css
@@ -2,8 +2,10 @@
     border: 1px solid transparent;
     background-color: rgb(222, 222, 222);
     border-radius: 0.3em;
-    width: 20%;
     margin-left: 1em;
+    height: 100vh;
+    /* position: fixed;
+    width: 25%; */
 }
 
 ul  {
@@ -12,6 +14,7 @@ ul  {
     margin: 0;
 }
 
+
 li a {
     text-decoration: none;
     padding: 0.5em 0.5em;
@@ -19,6 +22,16 @@ li a {
     color: black;
     font-size: large;
     font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+
+img {
+    height: 1.5em;
+    width: 1.5em;
+    border-radius: 50%;
+    margin-right: 0.5em;
+
 }
 
 li a:hover {
@@ -28,8 +41,9 @@ li a:hover {
 
 
 @media only screen and (max-width: 600px) {
+    
     .navbar {
-        width: 80%;
-      background-color: lightblue;
+      width: 96%;
+      background-color: rgb(178, 203, 211);
     }
   }
