--- a/newsfeed/src/app/components/navbar/navbar.component.html
+++ b/newsfeed/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,10 @@
             <a href="#">AllFriends</a>
         </li><hr>
         <li>
-            <a href="#">Morty</a>
+            <a routerLink="/user" href="#">
+                <img src="https://images.pexels.com/photos/4646215/pexels-photo-4646215.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                <p>Morty</p>
+            </a>
         </li>
         <li>
             <a href="#">Rick</a>
