consume images end point to display all image alerts on the home page

--- a/newsfeed/src/app/components/navbar/navbar.component.html
+++ b/newsfeed/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         <li>
             <a routerLink="/user" href="#">
                 <img src="{{user.avatar_url}}">
-                <p>{{user.firstname}}</p>
+                <p>{{user.firstname}} {{user.lastname}}</p>
             </a>
         </li>
         </ul>
