--- a/newsfeed/src/app/components/image-alert/image-alert.component.html
+++ b/newsfeed/src/app/components/image-alert/image-alert.component.html
@@ -1,10 +1,10 @@
-<div class="feed-alert">
+<div *ngFor="let image of images" class="feed-alert">
     <div class="headline">
-        <p>Morty updated their profile picture</p>
-        <p>12/02/2022</p>
+        <p>{{image.subject}} {{image.action}} a new {{image.object}}</p>
+        <p>{{image.date | date: "dd/MM/yyyy 'at' h:mma"}}</p>
     </div>
     <div class="image-container">
-        <img src="https://images.pexels.com/photos/4646215/pexels-photo-4646215.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+        <img src="{{image.image_url}}">
         <div class="reaction">
             <div class="reaction">
                 <p (click)="likeButtonClick()" style="margin-right: 0.2em;"><i class='bx bx-like bx-sm'></i></p>
@@ -13,7 +13,7 @@
 
             <div class="reaction">
                 <p style="margin-right: 0.2em; margin-left: 0.7em;"><i class='bx bx-comment bx-sm'></i></p>
-                <p>4</p>
+                <p>{{image.comments.length}}</p>
             </div>
         </div>
     </div>
