--- a/newsfeed/src/styles.css
+++ b/newsfeed/src/styles.css
@@ -28,9 +28,9 @@ body {
 .all-feeds {
     width: 78.8%;
     float: left;
-    background: rgb(245, 245, 245);
+    background: rgb(223, 223, 223);
     margin-left: 1em;
-    padding: 2em;
+    padding: 0 2em;
 }
 
 
@@ -38,7 +38,7 @@ body {
 .feed-alert {
     border-radius: 0.3em;
     background-color: white;
-    
+    margin-bottom: 2em;
 }
 
 .headline {
