--- a/newsfeed/src/app/components/comment-alert/comment-alert.component.html
+++ b/newsfeed/src/app/components/comment-alert/comment-alert.component.html
@@ -1,10 +1,10 @@
  <!-- alert for showing comment activity -->
- <div class="feed-alert">
+ <div *ngFor="let comment of comments" class="feed-alert">
     <div class="headline">
-        <p>Rick commented on Morty's profile picture</p>
-        <p>16/02/2022</p>
+        <p>{{comment.subject}} {{comment.action}} {{comment.pronoun}} {{comment.object}}</p>
+        <p>{{comment.date | date: "dd/MM/yyyy 'at' h:mma"}}</p>
     </div>
     <div class="comment">
-        <p>You are awesome</p>
+        <p>{{comment.text}}</p>
     </div>
 </div><br><hr><br>
