--- a/newsfeed/src/styles.css
+++ b/newsfeed/src/styles.css
@@ -2,6 +2,7 @@
 
 body {
     overflow-x: hidden;
+    background: #D2DBEE;
 }
 * {
     box-sizing: border-box;
@@ -13,84 +14,14 @@ body {
     text-decoration: underline;
 }
 
-.feedsSection {
-    width: 100vw;
+.textCenter {
+    text-align: center;
 }
 
-/* navbar */
-
-.nav {
-    width: 20%;
-    float: left;
-}
-
-/* feeds */
-.all-feeds {
-    width: 78.8%;
-    float: left;
-    background: rgb(223, 223, 223);
-    margin-left: 1em;
-    padding: 0 2em;
-}
-
-
-/* image alert */
-.feed-alert {
-    border-radius: 0.3em;
-    background-color: white;
-    margin-bottom: 2em;
-}
-
-.headline {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 1em;
-}
-
-.image-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-img {
-    height: 20em;
-    width: 35em;
-}
-
-.reaction {
+.flex {
     display: flex;
     align-items: center;
 }
 
-/* comment alert */
-.comment {
-    padding: 0.1em 1em;
-    font-style: italic;
-}
 
-@media screen and (max-width: 600px) {
-    body {
-        overflow-x: hidden;
-    }
 
-    .nav {
-        width: 96%;
-        margin: 0 0 0.8em 0;
-    }
-
-    .all-feeds {
-        margin: 0;
-        width: 100%;
-    }
-
-    img {
-        height: auto;
-        width: 100%;
-    }
-
-    .headline {
-        display: block;
-    }
-}
