--- a/newsfeed/src/app/components/feeds/feeds.component.css
+++ b/newsfeed/src/app/components/feeds/feeds.component.css
@@ -1,49 +1,149 @@
+.flex-container {
+	display: flex;
+}
+
+/* navbar */
+.nav {
+	width: 20%;
+}
+
+/* feeds */
+.all-feeds {
+	width: 78.8%;
+	margin-left: 1em;
+	padding: 0 2em;
+}
+
+/* random user details */
+.user-details {
+	justify-content: space-between;
+	padding: 0.5em 0.9em;
+	background: #D2DBEE;
+	border-radius: 2em;
+	margin-bottom: 2em;
+	box-shadow: inset 9.91px 9.91px 15px #BFC7D9, inset -9.91px -9.91px 15px #E5EFFF;
+}
+
+.user-details img {
+	height: 2.5em;
+	width: 2.5em;
+	border-radius: 50%;
+}
+
+.user-details p {
+	font-weight: 600;
+}
+
+/* image alert */
+.feed-alert {
+	border-radius: 1em;
+	margin-bottom: 2em;
+	background: #cbd6ec;
+    box-shadow: 9.91px 9.91px 15px #BFC7D9, -9.91px -9.91px 15px #BFC7D9;
+}
+
+.feed-alert:hover {
+	box-shadow: 3px 3px 13px #a7adbb, -3px -3px 13px #a7adbb;
+}
+
+.headline {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0 1em;
+}
+
+.image-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+img {
+	height: 20em;
+	width: 35em;
+}
+
+.reaction {
+	display: flex;
+	align-items: center;
+}
+
+/* comment section */
 .container {
-	max-width: 640px;
-	margin: 30px auto;
+	max-width: 30rem;
+	margin: 1.8rem auto;
 	background: rgb(158, 158, 158);
-	border-radius: 8px;
-	padding: 20px;
+	border-radius: 0.5rem;
+	padding: 1.8rem;
 }
 
 .comment {
 	display: block;
-	transition: all 1s;
-}
-.commentClicked {
-	min-height: 0px;
-	border: 1px solid #eee;
-	border-radius: 5px;
-	padding: 5px 10px
 }
 
 .container textarea {
 	width: 100%;
 	border: none;
 	background: #E8E8E8;
-	padding: 5px 10px;
+	padding: 0.3rem 0.6rem;
 	height: 50%;
-	border-radius: 5px 5px 0px 0px;
-	border-bottom: 2px solid #016BA8;
-	transition: all 0.5s;
-	margin-top: 15px;
+	border-radius: 0.3rem;
+	margin-top: 1rem 0;
 }
 
-button.primaryContained {
-	background: #016ba8;
+button {
+	background: #8d9bbb;
 	color: #fff;
-	padding: 10px 10px;
+	padding: 0.3rem 0.6rem;
 	border: none;
-	margin-top: 0px;
+	margin: 0 0.4rem 0 0 ;
 	cursor: pointer;
-	text-transform: uppercase;
-	letter-spacing: 4px;
-	box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
-	transition: 1s all;
-	font-size: 10px;
 	border-radius: 5px;
 }
 
-button.primaryContained:hover {
-	background: #9201A8;
+button:hover {
+	background: #999999;
+}
+
+/* comment alert */
+.comment {
+	padding: 0.1em 1em;
+	font-style: italic;
+}
+ 
+
+@media screen and (max-width: 843px) {
+	body {
+		overflow-x: hidden;
+	}
+
+	.flex-container {
+		display: block;
+	}
+
+	.nav {
+		width: 100%;
+		height: 55vh;
+		margin-bottom: 1em;
+	}
+
+	.all-feeds {
+		margin: 0;
+		width: 100%;
+	}
+
+	img {
+		height: auto;
+		width: 100%;
+	}
+
+	.headline {
+		display: block;
+		padding: 0.7rem;
+	}
+
+	.container {
+		max-width: 17rem;
+	}
 }
