--- a/newsfeed/src/app/components/navbar/navbar.component.css
+++ b/newsfeed/src/app/components/navbar/navbar.component.css
@@ -52,20 +52,46 @@ li a:hover {
     box-shadow: inset 9.91px 9.91px 15px #BFC7D9, inset -9.91px -9.91px 15px #E5EFFF;
 }
 
+.closebtn , .openbtn {
+    display: none;
+}
+
 
 @media only screen and (max-width: 843px) {
-    
     .navbar {
-      width: 100%;
-      background-color: rgb(178, 203, 211);
-      margin: 0;
-      position: absolute;
-      margin-bottom: 10rem;
-      height: 60vh;
+        height: 60vh;
+        width: 0;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background: #D2DBEE;
+        overflow-x: hidden;
+        margin-bottom: 10rem;
+        transition: 0.5s;
+       
     }
 
- .navbar  ul li a {
+    .navbar  ul li a {
         text-align: center;
         margin-left: 1rem;
     }
+
+    .openbtn {
+        display: block;
+        font-size: 27px;
+        cursor: pointer;
+        background: #D2DBEE;
+        padding: 10px 15px;
+        border: none;
+      }
+
+      .closebtn {
+        display: block;
+        text-decoration: none;
+        font-size: 30px;
+        color: #000;
+        position: absolute;
+        top: 0;
+        margin: 0.4em 0 0 7em;
+      }
   }
