--- a/newsfeed/src/app/components/feeds/feeds.component.css
+++ b/newsfeed/src/app/components/feeds/feeds.component.css
@@ -82,6 +82,11 @@ img {
 	display: block;
 }
 
+.commentMessage {
+	margin-bottom: 0.5em;
+	margin-top: 0;
+}
+
 .container textarea {
 	width: 100%;
 	border: none;
@@ -89,7 +94,7 @@ img {
 	padding: 0.3rem 0.6rem;
 	height: 50%;
 	border-radius: 0.3rem;
-	margin-top: 1rem 0;
+	margin-top: 1.5rem;
 }
 
 button {
