--- a/newsfeed/src/app/components/navbar/navbar.component.html
+++ b/newsfeed/src/app/components/navbar/navbar.component.html
@@ -7,6 +7,10 @@
         <li class="allFriends">
             <a  (click)="getAllFeeds()" href="#"><p>AllFriends</p> </a>
         </li><hr>
+
+         <!-- error message -->
+         <h4 *ngIf="errorMessage" class="error">{{errorMessage}}</h4>
+
         <ul *ngFor="let user of users; index as i">
         <li>
             <a (click)="getUser(i)" routerLink="" href="#">
